implement the proforma logical

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -159,7 +159,8 @@
     "saleInvoices": "Invoices",
     "saleQuotes": "Quotes",
     "saleSubscriptions": "Subscriptions",
-    "privatePage": "Private Page"
+    "privatePage": "Private Page",
+    "proforma":"Proforma"
   },
   "navbar": {
     "searchPlaceholder": "Search...",
