--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -117,7 +117,8 @@
     "salesCustomers": "Clients",
     "saleInvoices": "Factures",
     "saleQuotes": "Devis",
-    "privatePage": "Page Privée"
+    "privatePage": "Page Privée",
+    "proforma":"Proformat"
   },
   "navbar": {
     "searchPlaceholder": "Rechercher...",
